kubernetes/apps/gitea/statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pvc-gitea
      containers:
        - name: gitea
          image: gitea/gitea:1.18.5
          resources:
            requests:
              cpu: "50m"
              memory: "512Mi"
          volumeMounts:
            - name: data
              subPath: app
              mountPath: /data
        - name: mariadb
          image: mariadb:11.7.2
          volumeMounts:
          - name: data
            subPath: database
            mountPath: /var/lib/mysql
