kubernetes/apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: local-https
spec:
  tls:
  - hosts:
    - gitea.vaisanen.cloud
    secretName: gitea-certificate-secret
  rules:
  - host: gitea.vaisanen.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-gitea
            port:
              number: 3000
