kubernetes/apps/gitea/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-gitea
  namespace: gitea
spec:
  entryPoints:
    - local-https
  routes:
  - kind: Rule
    match: Host(`gitea.vaisanen.cloud`)
    services:
    - kind: Service
      name: svc-gitea
      port: 3000
  tls:
    secretName: gitea-certificate-secret
